--- a/QuanLyKhachSan/QuanLyKhachSan.csproj
+++ b/QuanLyKhachSan/QuanLyKhachSan.csproj
@@ -73,21 +73,25 @@
     <Compile Include="DatPhong.Designer.cs">
       <DependentUpon>DatPhong.cs</DependentUpon>
     </Compile>
-    <Compile Include="DbContext.cs" />
-    <Compile Include="LoaiPhong.cs" />
+    <Compile Include="Khach.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Khach.Designer.cs">
+      <DependentUpon>Khach.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Phong.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QLKS.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>QLKS.dbml</DependentUpon>
+    <Compile Include="TaoPhongMoi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TaoPhongMoi.Designer.cs">
+      <DependentUpon>TaoPhongMoi.cs</DependentUpon>
     </Compile>
     <Compile Include="TrangChu.cs">
       <SubType>Form</SubType>
@@ -104,6 +108,9 @@
     <EmbeddedResource Include="DatPhong.resx">
       <DependentUpon>DatPhong.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Khach.resx">
+      <DependentUpon>Khach.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,6 +125,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TaoPhongMoi.resx">
+      <DependentUpon>TaoPhongMoi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TrangChu.resx">
       <DependentUpon>TrangChu.cs</DependentUpon>
     </EmbeddedResource>
@@ -142,14 +152,6 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="QLKS.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>QLKS.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="QLKS.dbml.layout">
-      <DependentUpon>QLKS.dbml</DependentUpon>
-    </None>
     <None Include="Resources\icons8-hotel-64.png" />
   </ItemGroup>
   <ItemGroup>
@@ -187,6 +189,33 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\cancelled_rule_icon_217027.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clean_icon_215881.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clean_icon_215881 %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clean_icon_215881 %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\phone-call-auricular-symbol-in-black_icon-icons.com_56483.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\phone-call-auricular-symbol-in-black_icon-icons.com_56483 %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\check_icon-icons.com_73639.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\check_icon-icons.com_736391.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\setting_icon_184083.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logout_icon_151219.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
