--- a/QuanLyKhachSan/QuanLyKhachSan.csproj
+++ b/QuanLyKhachSan/QuanLyKhachSan.csproj
@@ -87,6 +87,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLKS.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLKS.dbml</DependentUpon>
+    </Compile>
     <Compile Include="TaoPhongMoi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -152,6 +157,14 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="QLKS.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>QLKS.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QLKS.dbml.layout">
+      <DependentUpon>QLKS.dbml</DependentUpon>
+    </None>
     <None Include="Resources\icons8-hotel-64.png" />
   </ItemGroup>
   <ItemGroup>
