--- a/QuanLyKhachSan/App.config
+++ b/QuanLyKhachSan/App.config
@@ -8,6 +8,9 @@
     <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString"
       connectionString="Data Source=LAPTOP-R1ZAX\SQLEXPRESS01;Initial Catalog=QLKS;Integrated Security=True;TrustServerCertificate=True"
       providerName="System.Data.SqlClient" />
+    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString1"
+      connectionString="Data Source=LAPTOP-R1ZAX\MSSQLSERVER01;Initial Catalog=QLKS;Integrated Security=True;TrustServerCertificate=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
