--- a/QuanLyKhachSan/QuanLyKhachSan.csproj
+++ b/QuanLyKhachSan/QuanLyKhachSan.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -61,23 +62,35 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChiTietPhong.cs">
+    <Compile Include="ChiTietPhongSuDung.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ChiTietPhong.Designer.cs">
-      <DependentUpon>ChiTietPhong.cs</DependentUpon>
+    <Compile Include="ChiTietPhongSuDung.Designer.cs">
+      <DependentUpon>ChiTietPhongSuDung.cs</DependentUpon>
     </Compile>
-    <Compile Include="DatPhong.cs">
+    <Compile Include="ChiTietPhongTrong.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DatPhong.Designer.cs">
-      <DependentUpon>DatPhong.cs</DependentUpon>
+    <Compile Include="ChiTietPhongTrong.Designer.cs">
+      <DependentUpon>ChiTietPhongTrong.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmDatPhong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDatPhong.Designer.cs">
+      <DependentUpon>FrmDatPhong.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmBaoCao.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmBaoCao.Designer.cs">
       <DependentUpon>FrmBaoCao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmPhong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPhong.Designer.cs">
+      <DependentUpon>FrmPhong.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmQuyDinh.cs">
       <SubType>Form</SubType>
@@ -117,6 +130,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLKS.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLKS.dbml</DependentUpon>
+    </Compile>
     <Compile Include="TaoPhongMoi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,14 +153,20 @@
     <Compile Include="TrangChu2.Designer.cs">
       <DependentUpon>TrangChu2.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ChiTietPhong.resx">
-      <DependentUpon>ChiTietPhong.cs</DependentUpon>
+    <EmbeddedResource Include="ChiTietPhongSuDung.resx">
+      <DependentUpon>ChiTietPhongSuDung.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DatPhong.resx">
-      <DependentUpon>DatPhong.cs</DependentUpon>
+    <EmbeddedResource Include="ChiTietPhongTrong.resx">
+      <DependentUpon>ChiTietPhongTrong.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmDatPhong.resx">
+      <DependentUpon>FrmDatPhong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmBaoCao.resx">
       <DependentUpon>FrmBaoCao.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPhong.resx">
+      <DependentUpon>FrmPhong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmQuyDinh.resx">
       <DependentUpon>FrmQuyDinh.cs</DependentUpon>
@@ -200,6 +224,14 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="QLKS.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>QLKS.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QLKS.dbml.layout">
+      <DependentUpon>QLKS.dbml</DependentUpon>
+    </None>
     <None Include="Resources\icons8-hotel-64.png" />
   </ItemGroup>
   <ItemGroup>
@@ -267,6 +299,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\3709753-call-customer-relation-service-support_108076.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\room_icon_144154.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
