Update, Fix , Add (DatPhong, Phong, KhuyenMai, Login) v2.1.4

--- a/QuanLyKhachSan/QuanLyKhachSan.csproj
+++ b/QuanLyKhachSan/QuanLyKhachSan.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>QuanLyKhachSan</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>latest</LangVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
@@ -158,6 +158,7 @@
     <Compile Include="FrmKhachHang.Designer.cs">
       <DependentUpon>FrmKhachHang.cs</DependentUpon>
     </Compile>
+    <Compile Include="InfoNhanVien.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
