--- a/QuanLyKhachSan/App.config
+++ b/QuanLyKhachSan/App.config
@@ -1,29 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString"
-      connectionString="Data Source=LAPTOP-R1ZAX\SQLEXPRESS01;Initial Catalog=QLKS;Integrated Security=True;TrustServerCertificate=True"
-      providerName="System.Data.SqlClient" />
-    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString1"
-      connectionString="Data Source=LAPTOP-R1ZAX\MSSQLSERVER01;Initial Catalog=QLKS;Integrated Security=True;TrustServerCertificate=True"
-      providerName="System.Data.SqlClient" />
-    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString2"
-      connectionString="Data Source=LAPTOP-2L5G5GIH\SQLEXPRESS03;Initial Catalog=QLKS;Integrated Security=True;Encrypt=True"
-      providerName="System.Data.SqlClient" />
-    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString3"
-      connectionString="Data Source=LAPTOP-R1ZAX\MSSQLSERVER01;Initial Catalog=QLKS;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
-      providerName="System.Data.SqlClient" />
+    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString" connectionString="Data Source=LAPTOP-R1ZAX\SQLEXPRESS01;Initial Catalog=QLKS;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
+    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString1" connectionString="Data Source=LAPTOP-R1ZAX\MSSQLSERVER01;Initial Catalog=QLKS;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
+    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString2" connectionString="Data Source=LAPTOP-2L5G5GIH\SQLEXPRESS03;Initial Catalog=QLKS;Integrated Security=True;Encrypt=True" providerName="System.Data.SqlClient"/>
+    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString3" connectionString="Data Source=LAPTOP-R1ZAX\MSSQLSERVER01;Initial Catalog=QLKS;Integrated Security=True;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   <entityFramework>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
 </configuration>
