Fix Report (ThongTinHoaDon)

--- a/QuanLyKhachSan/QuanLyKhachSan.csproj
+++ b/QuanLyKhachSan/QuanLyKhachSan.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>ChonPhongChuyen.cs</DependentUpon>
     </Compile>
     <Compile Include="DatDichVuDTO.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="FrmDatPhong.cs">
       <SubType>Form</SubType>
     </Compile>
