--- a/QuanLyKhachSan/QuanLyKhachSan.csproj
+++ b/QuanLyKhachSan/QuanLyKhachSan.csproj
@@ -187,6 +187,12 @@
     <Compile Include="FrmKhachHang.Designer.cs">
       <DependentUpon>FrmKhachHang.cs</DependentUpon>
     </Compile>
+    <Compile Include="QL_DatPhong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QL_DatPhong.Designer.cs">
+      <DependentUpon>QL_DatPhong.cs</DependentUpon>
+    </Compile>
     <Compile Include="RainbowGradientLabel.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -348,6 +354,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmKhachHang.resx">
       <DependentUpon>FrmKhachHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QL_DatPhong.resx">
+      <DependentUpon>QL_DatPhong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RainbowGradientLabel.resx">
       <DependentUpon>RainbowGradientLabel.cs</DependentUpon>
