Add funtion (FrmBaoCao), Fix ...

--- a/QuanLyKhachSan/App.config
+++ b/QuanLyKhachSan/App.config
@@ -5,10 +5,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString" connectionString="Data Source=LAPTOP-R1ZAX\SQLEXPRESS01;Initial Catalog=QLKS;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
-    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString1" connectionString="Data Source=LAPTOP-R1ZAX\MSSQLSERVER01;Initial Catalog=QLKS;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
-    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString2" connectionString="Data Source=LAPTOP-2L5G5GIH\SQLEXPRESS03;Initial Catalog=QLKS;Integrated Security=True;Encrypt=True" providerName="System.Data.SqlClient"/>
-    <add name="QuanLyKhachSan.Properties.Settings.QLKSConnectionString3" connectionString="Data Source=LAPTOP-R1ZAX\MSSQLSERVER01;Initial Catalog=QLKS;Integrated Security=True;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
+    <add name="QuanLyKhachSan" 
+		 connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Data\QLKS.mdf;Integrated Security=True;User Instance=True"
+       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
